# HiveMonitorTUI

./: Cargo.toml
src/: app.rs  config.rs  errors.rs  main.rs  models.rs
src/clients/: infer_client.rs  manage_client.rs  mod.rs
src/events/: handler.rs  mod.rs  spawner.rs
src/tui/: control_panel.rs  mod.rs  setup_panel.rs  tui.rs
src/ui/: events.rs  mod.rs  terminal.rs
src/ui/tabs/: console.rs  dashboard.rs  keys.rs  logs.rs  mod.rs  nodes.rs  queues.rs
src/utils/: clipboard.rs  http.rs  mod.rs  parsing.rs  polling.rs
src/widgets/: workers.rs
