[package]
name = "hive_monitor_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking"]}
anyhow = "1.0.82"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.0", features = ["derive"] }
