[package]
name = "hive_monitor_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "stream"] }
anyhow = "1.0.82"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.0", features = ["derive"] }
ratatui-crossterm = "0.0.0"
tokio = { version = "1.45.1", features = ["full", "io-util"] }
toml = "0.8.23"
clipboard = "0.5.0"
directories = "6.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
tokio-util = { version = "0.7.15", features = ["io"] }
futures = "0.3.31"
